--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": "true",
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "@rails/ujs": "^6.0.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "sass": "^1.54.0",
+    "turbolinks": "^5.2.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
